Working one wall

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <script type="text/javascript" src="https://www.cs.unm.edu/~angel/COURSERA/CODE/Common/flatten.js"></script>
 <script type="text/javascript" src="gl-matrix-min.js"></script>
+<script type="text/javascript" src="require.js"></script>
 <meta charset="UTF-8">
 <title>Z1</title>
 </head>
